--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "script": {
     "start": "nodemon server.js"
   },
-    
   "author": "Nhat Khang",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^5.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
